fix the number being getting cropped and option for color and font-sizes

--- a/Hotwax_Systems_July2023/modules/odometer.module/module.css
+++ b/Hotwax_Systems_July2023/modules/odometer.module/module.css
@@ -86,7 +86,9 @@
 .mdl_wrap .prs_item:last-child .prospect_milestone_title {
   font-size: 18px;
 }
-
+.odometer .odometer-digit{
+  padding-right: 2px; 
+ }
 @media(max-width:1360px) and (min-width:768px){
   .mdl_wrap .prs_item {
     -ms-flex: 0 0 50%;
